# wsn-palisades

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: README.md
notebooks/: sensor_nsga_fast_palisades.ipynb
results/csv/: WSN_Palisades_K_Sweep_Analysis.xlsx  df_k_sweep_k=10to60_PalisadesFinal.csv  k10-60_Palisades_resultsFinal.csv
sample/: aoi_palisades.geojson
scripts/: cogify_and_upload.sh  fetch_data.py  make_figures.py  run_ksweep.py  save_contours.py  setup_bucket.sh
src/wsn_palisades/: __init__.py  candidates.py  coverage.py  data_uris.py  ksweep.py  maps.py  optimizers.py  params.py  persistence.py  plotting.py  solar.py  surfaces.py  visibility.py
tests/: test_coverage.py  test_optimizers.py  test_params.py  test_persistence.py
